# cpp_logger

./: CMakeLists.txt  README.md  common_includes_t.h  cpp_logger_build_config_t.h  error_codes_t.h  icpp_logger_t.h  logger_wrapper_t.cpp  logger_wrapper_t.h  test.cpp
examples/: CMakeLists.txt
examples/console_log/: CMakeLists.txt  console_log.cpp
logger/: CMakeLists.txt
logger/core/: common_includes_t.h  cpp_logger_build_config_t.h  icpp_logger_t.h  ierror_number_t.h  logger_wrapper_t.cpp  logger_wrapper_t.h
logger/core/utilities/: error_code_t.cpp  error_code_t.h  smart_pointer_t.h  status_t.cpp  status_t.h
logger/editable/: error_codes_t.h  error_number_t.cpp  error_number_t.h
utilities/: smart_pointer_t.h  status_t.h
